This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: [BUILD] Using COUNT_ALLOCS breaks build
Type: compile error Stage: resolved
Components: Build Versions: Python 3.8, Python 3.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: benjamin.peterson, eelizondo, miss-islington
Priority: normal Keywords:

Created on 2018-02-21 19:35 by eelizondo, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 5800 merged eelizondo, 2018-02-21 19:35
PR 5806 merged miss-islington, 2018-02-22 04:56
Messages (3)
msg312504 - (view) Author: Eddie Elizondo (eelizondo) * Date: 2018-02-21 19:35
The following build crashed:
mkdir debug && cd debug
../configure --with-pydebug
make EXTRA_CFLAGS="-DCOUNT_ALLOCS"

The bug was introduced here: https://github.com/python/cpython/commit/25420fe290b98171e6d30edf9350292c21ef700e

Fix:
1) s/inter/interp/
2) Declare PyTypeObject
msg312533 - (view) Author: Benjamin Peterson (benjamin.peterson) * (Python committer) Date: 2018-02-22 04:55
New changeset 745dc65b17b3936e3f9f4099f735f174d30c4e0c by Benjamin Peterson (Eddie Elizondo) in branch 'master':
closes bpo-32898: Fix debug build crash with COUNT_ALLOCS (GH-5800)
https://github.com/python/cpython/commit/745dc65b17b3936e3f9f4099f735f174d30c4e0c
msg312535 - (view) Author: miss-islington (miss-islington) Date: 2018-02-22 05:44
New changeset bc2e1104693fd471b96ecac5b2ab4cffa09830ab by Miss Islington (bot) in branch '3.7':
closes bpo-32898: Fix debug build crash with COUNT_ALLOCS (GH-5800)
https://github.com/python/cpython/commit/bc2e1104693fd471b96ecac5b2ab4cffa09830ab
History
Date User Action Args
2022-04-11 14:58:58adminsetgithub: 77079
2018-02-22 05:44:13miss-islingtonsetnosy: + miss-islington
messages: + msg312535
2018-02-22 04:56:29miss-islingtonsetpull_requests: + pull_request5583
2018-02-22 04:55:21benjamin.petersonsetstatus: open -> closed

nosy: + benjamin.peterson
messages: + msg312533

resolution: fixed
stage: patch review -> resolved
2018-02-21 20:06:54serhiy.storchakasetstage: patch review
versions: + Python 3.7, Python 3.8
2018-02-21 19:35:25eelizondocreate