closes bpo-32898: Fix debug build crash with COUNT_ALLOCS (GH-5800)